--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap');
 /*
 font-family: 'Source Sans Pro', sans-serif;
+200;300;400;600;700
 */
 
 * {
@@ -8,6 +9,7 @@ font-family: 'Source Sans Pro', sans-serif;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    cursor: none;
 }
 
 .header {
@@ -26,12 +28,25 @@ nav {
     padding-bottom: 0px;
     display: flex;
     justify-content: space-between;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.15);
 }
 
-.img {
+.circle {
+    border: solid 2vh #ff7961;
+    height: 5vh;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
     margin: 10px 15px;
-    width: 6vh;
+    width: 5vh;
+}
+
+.circle:hover {
+    height: 0;
+    width: 0;
+    border-color: transparent;
+    transition: 0.2s;
+    transition-timing-function: ease-in;
 }
 
 nav ul li {
@@ -46,9 +61,9 @@ nav ul li {
     border: solid 0px;
     padding: 7px 25px;
     background-color: transparent;
-    transition: 0.6s;
+    transition: 0.4s;
     transition-timing-function: ease-in;
-    cursor: pointer;
+    cursor: none;
 }
 
 .btna {
@@ -66,26 +81,80 @@ span.size-32 {
     border: solid 0px;
     border-radius: 10vh;
     background-color: #ff7961;
+    cursor: none;
 }
 
-.scetion1{
+.scetion1 {
     font-family: 'Source Sans Pro', sans-serif;
-    margin-top: 30vh;
+    margin-top: 15vh;
     margin-left: 15vw;
-    
+
 
 }
 
-.scetion1 h1{
-    font-size: 10vh;
+.scetion1 h1 {
+    font-size: 12vh;
     font-weight: 400;
 }
 
-.scetion1 h2{
-    font-size: 4vh;
+.scetion1 h2 {
+    font-size: 6vh;
     font-weight: 600;
 }
 
-.scetion1 span{
+.scetion1 h3 {
+    font-size: 4vh;
+
+}
+
+.scetion1 span {
     color: #f44336;
+    font-size: 7.5vh;
+}
+
+.cursor {
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #fff;
+    transition: 50ms;
+    transition-timing-function: ease-out;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    mix-blend-mode: difference;
+}
+
+nav:hover~.cursor {
+    transform: scale(0.4);
+    mix-blend-mode: normal;
+    background: #ff7961;
+
+}
+
+.section2 {
+    margin-left: 15vw;
+    margin-top: 5vh;
+}
+
+.section2 button {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 3vh;
+    font-weight: 700;
+}
+
+.btn2 {
+    text-decoration: none;
+    color: #000;
+    border: solid 4px #ff7961;
+    border-radius: 50vh;
+    padding: 7px 25px;
+    background-color: transparent;
+    transition: 0.4s;
+    transition-timing-function: ease-in;
+    cursor: none;
+}
+
+.btn2:hover {
+    background-color: #ff7961;
 }
