--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 /*
 font-family: 'Source Sans Pro', sans-serif;
 200;300;400;600;700
+
+font-family: 'Roboto', sans-serif;
+400;500
 */
 
 * {
@@ -93,8 +98,10 @@ span.size-32 {
 }
 
 .scetion1 h1 {
-    font-size: 12vh;
-    font-weight: 400;
+    font-size: 10vh;
+    font-weight: 500;
+    color: #f44336;
+    font-family: 'Roboto', sans-serif;
 }
 
 .scetion1 h2 {
@@ -157,4 +164,57 @@ nav:hover~.cursor {
 
 .btn2:hover {
     background-color: #ff7961;
+}
+
+.img{
+float: right;
+margin-top: 13vh;
+margin-right: 1.5vw;
+transition: 1s;
+}
+
+.img:hover{
+    float: right;
+margin-top: 17vh;
+margin-right: 3vw;
+transition: 1s;
+}
+
+.scetion1 span{
+    color: #f44336;
+    font-size: 6vh;
+    font-weight: 600;
+}
+
+.foot{
+    padding-left: 12.5vw;
+    padding-right: 12.5vw;
+    padding-top: 1.5vh;
+    margin-top: 19vh;
+    padding-bottom: 0px;
+    display: flex;    
+    justify-content: flex-start;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
+.foot ul li{
+    list-style: none;
+    display: inline-block;
+}
+
+.foot button{
+    text-decoration: none;
+    color: #000;
+    border: solid 4px #ff7961;
+    border-radius: 50vh;
+    padding: 7px 25px;
+    background-color: transparent;
+    transition: 0.4s;
+    transition-timing-function: ease-in;
+    cursor: none;
+}
+
+.foot button:hover{
+        background-color: #ff7961;
 }
